tg-45 Crea pom de Cart y actualiza dependencias

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -19,7 +19,8 @@
 		<module>sgx-shared</module>
 		<module>sgx-backoffice</module>
 		<module>app</module>
-    </modules>
+		<module>cart</module>
+	</modules>
 	<properties>
 	</properties>
 
