--- a/back-end/app/pom.xml
+++ b/back-end/app/pom.xml
@@ -58,6 +58,12 @@
 			<version>5.7.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>ar.lamansys</groupId>
+			<artifactId>cart</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<profiles>
