--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -4,3 +4,5 @@ databaseChangeLog:
       relativeToChangelogFile: true
   - include:
       file: db/changelog/db.changelog-v0_1.yaml
+  - include:
+      file: db/changelog/db.changelog-cart.yaml
