--- a/back-end/app/pom.xml
+++ b/back-end/app/pom.xml
@@ -61,8 +61,7 @@
 		<dependency>
 			<groupId>ar.lamansys</groupId>
 			<artifactId>cart</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
-			<scope>compile</scope>
+			<version>${revision}</version>
 		</dependency>
 	</dependencies>
 
@@ -139,36 +138,7 @@
 			</plugin>
 
 			<!-- Plugin for creating a pom.properties file in the classpath -->
-			<plugin>
-				<groupId>com.internetitem</groupId>
-				<artifactId>write-properties-file-maven-plugin</artifactId>
-				<version>1.0.1</version>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>write-properties-file</goal>
-						</goals>
-						<configuration>
-							<filename>pom.properties</filename>
-							<properties>
-								<property>
-									<name>artifactId</name>
-									<value>${project.artifactId}</value>
-								</property>
-								<property>
-									<name>groupId</name>
-									<value>${project.groupId}</value>
-								</property>
-								<property>
-									<name>version</name>
-									<value>${revision}</value>
-								</property>
-							</properties>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
