--- a/back-end/cart/pom.xml
+++ b/back-end/cart/pom.xml
@@ -17,6 +17,11 @@
     <version>${revision}</version>
     <description>Cart Market</description>
 
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
 <dependencies>
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -31,7 +36,6 @@
     <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
-        <version>${lombok.version}</version>
         <scope>compile</scope>
     </dependency>
     <dependency>
