--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -22,6 +22,8 @@
 		<module>cart</module>
 	</modules>
 	<properties>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 
 	<dependencyManagement>
@@ -29,7 +31,8 @@
 			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
-				<version>1.18.4</version>
+				<version>1.18.22</version>
+				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.liquibase</groupId>
