tg-572 Crea script para creación de proyecto básica en la DB

--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -6,3 +6,5 @@ databaseChangeLog:
       file: db/changelog/db.changelog-v0_1.yaml
   - include:
       file: db/changelog/db.changelog-cart.yaml
+  - include:
+      file: db/changelog/db.changelog-inic_cart.sql
