--- a/back-end/app/src/main/resources/application-bd.properties
+++ b/back-end/app/src/main/resources/application-bd.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 # ===============================
 # Liquibase
